M2.4: Adding register store to admin

--- a/view/adminhtml/templates/system/config/register_store.phtml
+++ b/view/adminhtml/templates/system/config/register_store.phtml
@@ -10,7 +10,7 @@
 <button class="scalable" type="button" id="<?= $block->getHtmlId() ?>" data-mage-init='{"beehexaRegisterStore":{
     "url": "<?= $block->escapeUrl($block->getAjaxUrl()) ?>",
     "elementId": "<?= $block->getHtmlId() ?>",
-    "successText": "<?= $block->escapeHtmlAttr(__('Successful!?')) ?>",
+    "successText": "<?= $block->escapeHtmlAttr(__('Successful!!!')) ?>",
     "failedText": "<?= $block->escapeHtmlAttr(__('Connection failed! Try again?')) ?>"}}'>
     <span id="<?= $block->getHtmlId() ?>_result"><?= $block->escapeHtml($block->getButtonLabel()) ?></span>
 </button>
