M2.4: Fixing the new coding standard issue

--- a/view/adminhtml/templates/system/config/generate_integration.phtml
+++ b/view/adminhtml/templates/system/config/generate_integration.phtml
@@ -8,7 +8,7 @@
  */
 ?>
 <button class="scalable" type="button" id="<?= $block->getHtmlId() ?>"
-    <?= $this->getDisabled() ? 'disabled' : '' ?> data-mage-init='{"beehexaGenerateIntegration":{
+    <?= $block->getDisabled() ? 'disabled' : '' ?> data-mage-init='{"beehexaGenerateIntegration":{
     "url": "<?= $block->escapeUrl($block->getAjaxUrl()) ?>",
     "elementId": "<?= $block->getHtmlId() ?>",
     "successText": "<?= $block->escapeHtmlAttr(__('Successful!')) ?>",
